import {
  BaseEntity,
  Column,
  CreateDateColumn,
  Entity,
  PrimaryGeneratedColumn,
  Unique,
  UpdateDateColumn,
} from 'typeorm'

@Entity({ name: 'users' })
export class Project extends BaseEntity {
  @PrimaryGeneratedColumn()
  id: number

  @Unique(['name'])
  @Column()
  name: string

  @Column({ default: false })
  isPrivate: boolean

  @CreateDateColumn({
    default: `now()`,
    nullable: true,
  })
  createdAt: string

  @UpdateDateColumn({
    default: `now()`,
    nullable: true,
  })
  updatedAt: string

  constructor(partial: Partial<Project>) {
    super()
    Object.assign(this, partial)
  }
}
